--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="social-links">
                 <a href="mailto:raaivox@proton.me" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://instagram.com/raaivox" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://youtube.com/raaivox" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://youtube.com/@raaivox" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </section>
