--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="hero-text">We help young entrepreneurs build their dream brands. From logos to websites, social media to business cards - we've got everything you need to make your mark.</p>
             
             <div class="social-links">
-                <a href="mailto:raaivox@proton.me" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:raaivox@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://instagram.com/raaivox" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://youtube.com/@raaivox" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
