--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
     </nav>
 
     <section id="home" class="hero">
-        <div class="container">
+        <div class="hero-content container">
+            <div class="video-container">
+                <video autoplay loop muted playsinline preload="auto" class="hero-video">
+                    <source src="./WhatsApp Video 2025-04-27 at 12.23.23 AM.mp4" type="video/mp4">
+                </video>
+            </div>
+            
             <h1>Turn Your Ideas Into Reality</h1>
             <p class="hero-text">We help young entrepreneurs build their dream brands. From logos to websites, social media to business cards - we've got everything you need to make your mark.</p>
-            
+
             <div class="social-links">
                 <a href="mailto:raaivox@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://instagram.com/raaivox" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://youtube.com/@RaaiVoxOfficial" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/@RaaiVoxOfficial" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </section>
